--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ span {
       padding: 50px;
       color: white;
   }
-  input, textarea, #send{
+  input, textarea, .butn{
       padding: 10px;
       background-color: rgb(108, 219, 108);
       border: 4px solid rgb(84, 202, 84);
@@ -170,7 +170,7 @@ span {
       outline: none;
       
   }
-  #send:hover {
+  .butn:hover {
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
   }
   input:hover, input:focus , textarea:hover, textarea:focus{
